compiler/testData/diagnostics/tests/when/testTask/UnusedWhen.kt
fun foo(x: Int) = when(x){
    else -><!UNRESOLVED_REFERENCE!>print<!>(x)
}
